@@ -3,6 +3,8 @@
 * Add scrollbar to prevent long font names making save dialog too wide
   Closes Launchpad bug 1113208
   (The save dialogue is way to big for my screen and cannot resize)
+* Don't need to convert image to .tiff for tesseract v3
+  Thanks to Leon Fisk for the patch
 
 
 1.1.1 (01.02.2013):
